*SVN*

* Fix calling .clear on a has_many :dependent=>:delete_all association. [tarmo]

* Allow change_column to set NOT NULL in the PostgreSQL adapter [tarmo]

* Fix that ActiveRecord would create attribute methods and override custom attribute getters if the method is also defined in Kernel.methods. [Rick]

* Don't call attr_readonly on polymorphic belongs_to associations, in case it matches the name of some other non-ActiveRecord class/module.  [Rick]

* Try loading activerecord-<adaptername>-adapter gem before trying a plain require so you can use custom gems for the bundled adapters. Also stops gems from requiring an adapter from an old Active Record gem.  [Jeremy Kemper, Derrick Spell]


*2.0.0 [Preview Release]* (September 29th, 2007) [Includes duplicates of changes from 1.14.2 - 1.15.3]

* Add attr_readonly to specify columns that are skipped during a normal ActiveRecord #save operation. Closes #6896 [dcmanges]

  class Comment < ActiveRecord::Base
    # Automatically sets Article#comments_count as readonly.
    belongs_to :article, :counter_cache => :comments_count
  end

  class Article < ActiveRecord::Base
    attr_readonly :approved_comments_count
  end

* Make size for has_many :through use counter cache if it exists.  Closes #9734 [xaviershay]

* Remove DB2 adapter since IBM chooses to maintain their own adapter instead.  [Jeremy Kemper]

* Extract Oracle, SQLServer, and Sybase adapters into gems.  [Jeremy Kemper]

* Added fixture caching that'll speed up a normal fixture-powered test suite between 50% and 100% #9682 [frederick.cheung@gmail.com]

* Correctly quote id list for limited eager loading.  #7482 [tmacedo]

* Fixed that using version-targetted migrates would fail on loggers other than the default one #7430 [valeksenko]

* Fixed rename_column for SQLite when using symbols for the column names #8616 [drodriguez]
